Related: tdf#116928 set specific parent for document warning dialog

Change-Id: I827563c16a2ae59c698e1bfa82022a11f5256483